Header Nav Menu: overflow fixes.

--- a/src/components/header/partials/HeaderMenu.module.scss
+++ b/src/components/header/partials/HeaderMenu.module.scss
@@ -17,9 +17,10 @@
     max-height: 100%;
     overflow: hidden auto;
     display: block;
+    padding: 0.1rem;
 
     @include media_up($breakpoint_minibook) {
-      padding: 0 0 0 1.25rem;
+      padding: 0.1rem 0.1rem 0.1rem 1.25rem;
       display: flex;
       flex-wrap: wrap;
       flex-direction: row;
